# CodingPractice

./: .gitignore  README.md
CV/: calOpticalFlow.py  classify_burr.py  cv_boxes.py  myclassifier.py
CodingInterviews/src/: BaseAlgorithm.java  Q10.java  Q11.java  Q12.java  Q14.java  Q15.java  Q16.java  Q17.java  Q21.java  Q22.java  Q23.java  Q24.java  Q25.java  Q26.java  Q27.java  Q28.java  Q29.java  Q3.java  Q30.java  Q31.java  Q32.java  Q33.java  Q34.java  Q35.java  Q36.java  Q37.java  Q38.java  Q39.java  Q39_2.java  Q4.java  Q40.java  Q41.java  Q41_2.java  Q42.java  Q42_2.java  Q44.java  Q45.java  Q46.java  Q47.java  Q5.java  (+15 more)
CoreJava-10th-ver/src/: CoreJavaMain.java
CppPrimer/: README.md
CppPrimer/2017-8-24/: main.cpp
CppPrimer/chapter_10/: main.cpp
CppPrimer/chapter_11/: main.cpp
CppPrimer/chapter_12/: main.cpp
CppPrimer/chapter_15/: main.cpp
CppPrimer/chapter_6/: main.cpp
CppPrimer/chapter_7/: main.cpp
CppPrimer/chapter_8/: main.cpp
CppPrimer/chapter_9/: main.cpp
CppPrimer/container/: main.cpp
DesignPatterns/Adapter/: main.cpp
DesignPatterns/Command/: main.cpp
DesignPatterns/Composite/: main.cpp
DesignPatterns/FactoryMethod/: main.cpp
DesignPatterns/Observer/: main.cpp
DesignPatterns/Proxy/: main.cpp
DesignPatterns/Singleton/: main.cpp
JAVA/: MyMatrix.java  Q2.java  meituan.java  minKs.java  toutiao.java  wangyi.java  xiecheng.java
JAVA/leetcode/: Add2num.java  FindtheDuplicateNumber287.java  LongestSubstringWithoutRepeatingCharacters3.java  PerfectSquares279.java  ReversePolishNotation.java  SUM3_15.java  SortList.java  TreeNode.java  _10RegularExpressionMatching.java  _11ContainerWithMostWater.java  _139WordBreak.java  _152MaximumProductSubarray.java  _17LetterCombinationsofAPhoneNumber.java  _20ValidParentheses.java  _215KthLargestElementInAnArray.java  _21MergeTwoSortedLists.java  _22GenerateParentheses.java  _234PalindromeLinkedList.java  _23MergeKSortedLists.java  _33SearchinRotatedSortedArray.java  _34SearchForaRange.java  _39CombinationSum.java  _42_TrappingRainWater.java  _46Permutations.java  _48RotateImage.java  _494TargetSum.java  _49GroupAnagrams.java  _543DiameterOfBinaryTree.java  _55JumpGame.java  _56MergeIntervals.java  _581ShortestUnsortedContinuousSubarray.java  _5LongestPalindromicSubstring.java  (+6 more)
MachineLearning/: 1st_svm.py
SAT_problem/: SAT_problem.pro  _clause.h  _cnf.h  bitmap.cpp  bitmap.h  clause.cpp  clause.h  cnf.cpp  cnf.h  cnfedit.cpp  cnfedit.h  main.c  solver.cpp  solver.h  test.cpp  test_clause.cpp  test_cnf.cpp  test_solver.cpp  version.cpp  version.h  versionedit.cpp  versionedit.h  versionset.cpp  versionset.h  vsetbuilder.cpp  vsetbuilder.h
TensorFlow/: SavedModel_demo.py  estimator-train_eval.py  test-gpu-speedup.py  tf_obj_detection_demo.py
avx2_c/: avx2_c.pro  cal_p.c  cal_p.h  main.c
hosted_network/: hosted_network.pro  mainwindow.cpp  mainwindow.h  mywlan.cpp  mywlan.h
java-sqlite/: firstSqlite.db
jupyter_notebook/: myfirst_ipy.ipynb
minSwapChannelsCount/: main.cpp
ncnn-qtproj/: ncnn.pro
pic_magnifying/: calcrect.cpp  calcrect.h  main.cpp  pic_magnifying.qbs
pyProj/: dataBased.py  draw_curve.py  line_demo_dash_control.py  voiceBased.py
router-Nat/: 408router-singleNIC  README.md  dhcp_staticIP.bat  ifcfg-enp1s0_1  set_408router.sh
streaming_media/qt_proj/1st_with_ffmpeg/: CMakeLists.txt  README.md  avframes_manager.cpp  avframes_manager.h  decoder_thread.cpp  decoder_thread.h  demux_decode.cpp  fragment.fsh  glwidget.cpp  glwidget.h  images_panel.cpp  images_panel.h  main.cpp  mainwindow.cpp  mainwindow.h  mylog.h  vertex.vsh
(+183 files in other folders)
